kubernetes/manifests/k3d/beyla.yaml
---
# Source: beyla/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beyla
  namespace: monitoring
  labels:
    helm.sh/chart: beyla-1.16.0
    app.kubernetes.io/name: beyla
    app.kubernetes.io/instance: beyla
    app.kubernetes.io/version: "3.7.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: beyla
    app.kubernetes.io/component: networking
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/name: beyla
    app.kubernetes.io/instance: beyla
---
# Source: beyla/templates/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beyla
  namespace: monitoring
  labels:
    helm.sh/chart: beyla-1.16.0
    app.kubernetes.io/name: beyla
    app.kubernetes.io/instance: beyla
    app.kubernetes.io/version: "3.7.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: beyla
    app.kubernetes.io/component: workload
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: beyla
      app.kubernetes.io/instance: beyla
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 0
  template:
    metadata:
      annotations:
        checksum/config: 3e795b6bacfb7e77f8039faab5fcac0ea67b8ea8075c1a664bdd51a154b5c8f1
      labels:
        helm.sh/chart: beyla-1.16.0
        app.kubernetes.io/name: beyla
        app.kubernetes.io/instance: beyla
        app.kubernetes.io/version: "3.7.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: beyla
        app.kubernetes.io/component: workload
    spec:
      serviceAccountName: beyla
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: beyla
          image: docker.io/grafana/beyla:3.7.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
          - name: metrics
            containerPort: 9090
            protocol: TCP
          volumeMounts:
            - mountPath: /etc/beyla/config
              name: beyla-config
            - mountPath: /sys/fs/cgroup
              name: cgroup
      volumes:
        - name: beyla-config
          configMap:
            name: beyla
        - name: cgroup
          hostPath:
            path: /sys/fs/cgroup
